# research-portfolio-aat-rbf

./: .gitattributes  .gitignore  PROJECTS.md  README.md  REPRODUCIBILITY.md
20260616Panama/: 260402 남산 Lab meeting.pptx  extract_sigmas.py  flow.md  issue.md  make_interactive_panama.py  manual.md  run_duffing.py  run_panama.py
20260616Panama/Panama/: test_dataframes.xlsx  train_dataframes.xlsx
20260616Panama/SI_code/: Code 1.py  Code 2.py
20260616Panama/src/: __init__.py  duffing.py  panama.py  plotting.py  rbf.py  transfer_sigma.py
AAT_ap/: manual.md  report.md  sigma.csv
AAT_ap/src/: duffing.py  (+5 more)
AAT_ap_2/: compare.md  figure_panama.pkl  figure_panama.py  figure_panama_metrics.csv  guide.md  manual.md  report.md  sigma.csv
AAT_ap_scaled/: figure4_metrics.csv  figure_panama.py  figure_panama_metrics.csv  manual.md  report.md
FEDL_Data/: FEDL_Plotting_Tool.spec  README.md
MES_SQLD_Practice/: .gitignore  README.md
RBF2/: figure_4.py  main.py
RBFRQ/: RBFRQfit.py  data.xlsx
RBF_Power_Prediction/: Fig4_Replication.py  PLAN.md  main.py
SECOM_Defect_Prediction/: .gitignore  BASELINE_NOTES.md  MODEL_CARD.md  PROJECT_PLAN.md  README.md  requirements.txt  run_experiment.py  threshold_analysis.py  tune_model.py
memT_BO/: .gitignore  CURATION.md  README.md  TFT BO 기초 교육.pptx
new_AAT/: .gitignore  README.md  guide.md  pyproject.toml
new_AAT/configs/: hardware_experiment.yaml
new_AAT/src/aat_kernel/: __init__.py  __main__.py  calibration.py  cli.py  hardware_kernel.py
new_AAT/tests/: test_calibration.py  test_cli_smoke.py  test_hardware_kernel.py
(+293 files in other folders)
