[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aat-kernel"
version = "0.1.0"
description = "Hardware-aware AAT kernel library and regression experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
aat-calibrate-curves = "aat_kernel.cli:calibrate_curves_cli"
aat-run-hardware = "aat_kernel.cli:run_hardware_cli"
aat-kernel = "aat_kernel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
